# tomoko-research-operator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LOG.md  MEMORY.md  PLAN.md  README.md  pyproject.toml
src/tomoko_research_operator/: __init__.py  artifacts.py  cdp.py  chatgpt.py  cli.py  mcp_server.py  models.py  perplexity.py  providers.py
tests/: test_cdp.py  test_mcp_server.py  test_models.py
